fix width issue on smaller displays

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -17,7 +17,7 @@
   line-height: 3.5rem;
   text-transform: uppercase;
   float: left;
-  max-width: 71.5%;
+  width: 71.5%;
   margin-top: 2rem;
   letter-spacing: 0.9rem;
   
